--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -179,6 +179,9 @@ body.thredx .logo path
     object-fit: cover;
     object-position: bottom;
 
+    @media $mobile
+        height: 50vh
+
 .case-header
     margin: 0 0 5vw
 
@@ -262,6 +265,9 @@ body.thredx .logo path
 
 .col-12
     grid-column: span 12;
+
+    @media $mobile
+        margin-bottom: 2rem
 
 
 .col figure,
