--- a/src/css/pages/shop.styl
+++ b/src/css/pages/shop.styl
@@ -70,6 +70,9 @@ body.shop .logo path
     img 
         margin-bottom: 1.5rem
 
+        @media $mobile
+            margin-bottom: 1rem
+
     .heading-four
         margin: 0
 
@@ -77,7 +80,7 @@ body.shop .logo path
         margin: 1rem 0 0 0
 
         @media $mobile
-            margin: 0
+            margin: .5rem 0 0 0
 
     .shop-item__price
         opacity: .6
