--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -92,6 +92,9 @@ p,
     margin-bottom: .5rem
     display: inline-block
 
+    @media $mobile
+        font-size: clamp(1.5rem, 2.75vw, 4rem);
+
     &::before 
         content:''
         position: absolute;
@@ -117,7 +120,7 @@ p,
     line-height: 1.3
 
     @media $mobile
-        font-size: 24px;
+        font-size: clamp(1.5rem, 4.1vw, 5rem);
         text-transform: none;
         text-align: left;
 
