Made cases with object fit go from center

--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -217,6 +217,7 @@ body.thredx .logo path
 
     img
         object-fit: cover
+        object-position: center
 
 .col *:last-child
     margin-bottom: 0
