--- a/assets/main.css
+++ b/assets/main.css
@@ -1747,6 +1747,7 @@ body.thredx .logo path {
 }
 .col img {
   object-fit: cover;
+  object-position: center;
 }
 .col *:last-child {
   margin-bottom: 0;
