--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -11,6 +11,9 @@ h5
     line-height: 1.07
     margin: 0 0 2rem
 
+    @media $mobile
+        margin-bottom: 1rem
+
 h1,
 .heading-one 
     font-size: clamp(2.5rem, 3.6vw + 1rem, 7.625rem)
@@ -18,12 +21,18 @@ h1,
     margin: 0 0 2rem
     letter-spacing: .5px
 
+    @media $mobile
+        margin-bottom: 1rem
+
 h2,
 .heading-two
     font-size: clamp(2rem, 3vw + 1.1rem, 5rem);
     margin: 0 0 1.5rem
     line-height: 1.1
     letter-spacing: .5px
+
+    @media $mobile
+        margin-bottom: 1rem
 
 h3,
 .heading-three
