--- a/src/css/pages/work.styl
+++ b/src/css/pages/work.styl
@@ -36,10 +36,13 @@ body.work .logo path
     padding: 0 2rem
 
     @media $mobile
-        padding: 0 2rem 1rem
+        padding: 0 1rem 1rem
 
 .case-wrapper
     margin-top: 11vw
+
+    @media $mobile
+        margin-top: 5rem
 
 .animate__animated.case-small
     animation-duration: .6s
