Added loader after 600ms

--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -186,7 +186,7 @@ body.thredx .logo path
     margin: 0 0 5vw
 
     @media $mobile
-        margin-bottom: 0
+        margin-bottom: 1rem
 
 .case-pic
     margin: 0
