Added margin bottom to big title front

--- a/src/css/header-big.styl
+++ b/src/css/header-big.styl
@@ -19,7 +19,7 @@
     @media $mobile
         width: 100%
         padding: 0
-        margin: 0
+        margin: 0 0 1rem
 
 .header-big__bg 
     position: absolute;
