--- a/assets/main.css
+++ b/assets/main.css
@@ -1208,12 +1208,14 @@ p,
   text-align: center;
   font-weight: 600;
   line-height: 1.3;
+  margin-bottom: -6rem;
 }
 @media (max-width: 767px) {
   .uppercase {
     font-size: clamp(1.5rem, 4.1vw, 5rem);
     text-transform: none;
     text-align: left;
+    margin-bottom: 0;
   }
 }
 .fullsize-link {
@@ -1330,12 +1332,13 @@ a {
 .header-big h1 {
   width: 58%;
   padding-top: 32px;
+  margin: 0 0 0.3rem;
 }
 @media (max-width: 767px) {
   .header-big h1 {
     width: 100%;
     padding: 0;
-    margin: 0 0 1rem;
+    margin: 0;
   }
 }
 .header-big__bg {
@@ -2030,6 +2033,43 @@ h5,
     margin: -2.5rem 0 2.5rem 0;
   }
 }
+#swoosh {
+  position: absolute;
+  left: -20px;
+  right: 0;
+  margin: 0 auto;
+  max-width: 70rem;
+  margin-top: 1.5rem;
+}
+#swoosh rect {
+  fill: var(--main-yellow);
+}
+.swoosh-title {
+  display: none;
+}
+.swoosh-title > span {
+  margin-right: 1.25rem;
+}
+@media (max-width: 767px) {
+  .swoosh-title > span {
+    margin-right: 0.75rem;
+  }
+}
+.swoosh-title--active {
+  display: flex;
+}
+.swoosh-title--active span:first-child span {
+  animation-delay: 0.1s !important;
+}
+.swoosh-title--active span:nth-child(2) span {
+  animation-delay: 0.4s !important;
+}
+.swoosh-title--active.title-1 span:first-child span {
+  animation-delay: 1.2s !important;
+}
+.swoosh-title--active.title-1 span:nth-child(2) span {
+  animation-delay: 1.4s !important;
+}
 body.front {
   color: var(--main-yellow);
   background-color: var(--main-bg-color);
@@ -2079,7 +2119,7 @@ body.front .logo path {
 }
 @media (max-width: 767px) {
   .front-info {
-    padding: 3rem 0;
+    padding: 5rem 0;
     min-height: 0;
   }
 }
@@ -2417,6 +2457,7 @@ body.work .logo path {
 }
 .btn-wrapper {
   display: flex;
+  margin-top: 1rem;
 }
 @media (max-width: 767px) {
   .btn-wrapper {
