--- a/src/css/header-big.styl
+++ b/src/css/header-big.styl
@@ -15,11 +15,12 @@
 .header-big h1 
     width: 58%
     padding-top: 32px
+    margin: 0 0 .3rem
 
     @media $mobile
         width: 100%
         padding: 0
-        margin: 0 0 1rem
+        margin: 0
 
 .header-big__bg 
     position: absolute;
