--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -127,11 +127,13 @@ p,
     text-align: center
     font-weight: 600
     line-height: 1.3
+    margin-bottom: -6rem;
 
     @media $mobile
         font-size: clamp(1.5rem, 4.1vw, 5rem);
         text-transform: none;
         text-align: left;
+        margin-bottom: 0
 
 .fullsize-link
     position absolute
