--- a/src/css/elements/footer.styl
+++ b/src/css/elements/footer.styl
@@ -67,6 +67,7 @@
     @media $mobile
         grid-gap: 0
         padding: 2.5rem 1rem 0;
+        margin-bottom: 0
 
     ul
         list-style: none
