--- a/src/css/pages/about.styl
+++ b/src/css/pages/about.styl
@@ -62,8 +62,9 @@ body.about .logo path
     margin-bottom: -7.556vw; // Margin minus to get burgundy section to fall behind
 
     @media $mobile
-        width: 200%
-        position: absolute
+        height: 5rem;
+        position: absolute;
+        object-fit: cover;
 
 .wrapper-about
     width: 55vw
