--- a/src/css/pages/contact.styl
+++ b/src/css/pages/contact.styl
@@ -2,6 +2,15 @@ body.contact
     color: #2CAFC7
     background-color: #131313
 
+    .col-12 
+
+        @media $mobile
+            margin-bottom: 0
+
+        p 
+            @media $mobile
+                margin-bottom: 0
+
 body.contact .logo path 
     fill: #2CAFC7
 
