--- a/src/css/header-big.styl
+++ b/src/css/header-big.styl
@@ -8,6 +8,7 @@
     flex-direction: column;
     text-align: center;
     justify-content: center;
+    overflow: hidden
 
     @media $mobile
         padding: 0 1rem
@@ -20,7 +21,12 @@
     @media $mobile
         width: 100%
         padding: 0
-        margin: 0
+        margin: 0 0 .25rem
+
+.header-big h2.heading-one
+
+    @media $mobile
+        margin-bottom: 0
 
 .header-big__bg 
     position: absolute;
