Fixed aos for mobile

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -91,3 +91,10 @@ canvas
 @import 'loader'
 @import 'pages/**'
 @import 'elements/**'
+
+@media $mobile
+    [data-aos]
+        visibility: visible;
+    
+    [data-aos].animated
+        visibility: visible
