--- a/src/css/elements/button.styl
+++ b/src/css/elements/button.styl
@@ -26,7 +26,7 @@
     @media $mobile
         flex-direction: column
         width: 100%
-        padding: 1rem
+        padding: 1rem 1rem 0 1rem
 
     > .btn 
         margin-right: 2rem
@@ -34,6 +34,9 @@
         @media $mobile
             margin-bottom: 1rem
             margin-right: 0
+
+            &:last-child
+                margin-bottom: 0
 
 .btn-category 
     display: block;
