--- a/src/css/header.styl
+++ b/src/css/header.styl
@@ -10,6 +10,9 @@
     opacity: 1
     transition: .3s ease-in
 
+    &.hide
+        opacity: 0
+
     @media $mobile
         left: 1rem;
         right: 1rem;
