--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -272,9 +272,9 @@ body.thredx .logo path
         margin-bottom: 2rem
 
 
-.col figure,
-.col img
-    height: 100%
+// .col figure,
+// .col img
+//     height: 100%
 
 .push-3-11
     grid-column-start: 3;
