--- a/src/css/pages/about.styl
+++ b/src/css/pages/about.styl
@@ -9,7 +9,11 @@ body.about .logo path
     color: var(--main-about-primary)
 
 .about .header nav a::before 
-    background: var(--main-about-primary)   
+    background: var(--main-about-primary)
+
+.about .menu-icon span {
+    background-color: var(--main-about-primary)
+}   
 
 .about .wrapper
     background-image: url('../assets/images/lines-bg.webp')
