--- a/src/css/pages/contact.styl
+++ b/src/css/pages/contact.styl
@@ -20,6 +20,10 @@ body.contact .logo path
 .contact .header nav a::before 
     background: #2CAFC7   
 
+.contact .menu-icon span {
+    background-color: #2CAFC7
+}
+
 .contact .wrapper
     background: url('../assets/images/stars.svg') repeat
 
