--- a/src/css/pages/home.styl
+++ b/src/css/pages/home.styl
@@ -11,6 +11,10 @@ body.front .logo path
 .front .header nav a::before 
     background: var(--main-yellow)
 
+.front .menu-icon span {
+    background-color: var(--main-yellow)
+}
+
 .shadow-front 
     position absolute
     top: -6rem
