--- a/src/css/pages/shop.styl
+++ b/src/css/pages/shop.styl
@@ -11,6 +11,10 @@ body.shop .logo path
 .shop .header nav a::before 
     background: var(--main-shop-primary)
 
+.shop .menu-icon span {
+    background-color: var(--main-shop-primary)
+}
+
 .small-header
     width: 52.6388888889%
     text-align: center
