--- a/src/css/pages/work.styl
+++ b/src/css/pages/work.styl
@@ -23,6 +23,10 @@ body.work .logo path
 .work .header nav a::before 
     background: var(--main-work-primary)
 
+.work .menu-icon span {
+    background-color: var(--main-work-primary)
+}
+
 .work .wrapper 
     padding: 9rem 0 0 0
 
