--- a/assets/main.css
+++ b/assets/main.css
@@ -1257,6 +1257,8 @@ a {
 }
 .logo {
   margin: 0;
+  z-index: 2;
+  position: relative;
 }
 @media (min-width: 1666px) {
   .logo svg {
@@ -1267,11 +1269,6 @@ a {
 .logo path {
   transition: 0.3s ease-in;
 }
-@media (max-width: 767px) {
-  .header nav {
-    display: none;
-  }
-}
 .header nav .active a::before {
   transform-origin: 0% 50%;
   transform: scale3d(1, 1, 1);
@@ -1281,6 +1278,16 @@ a {
   text-decoration: none;
   font-weight: 500;
   position: relative;
+}
+@media (max-width: 767px) {
+  .header nav a {
+    font-family: p22-mackinac-pro, serif;
+    font-weight: 800;
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    display: block;
+    color: currentColor !important;
+  }
 }
 .header nav a::before {
   content: '';
@@ -1293,6 +1300,12 @@ a {
   transform-origin: 100% 50%;
   transform: scale3d(0, 1, 1);
   transition: transform 0.3s;
+}
+@media (max-width: 767px) {
+  .header nav a::before {
+    height: 3px;
+    background: var(--main-yellow) !important;
+  }
 }
 .header nav a:hover::before {
   transform-origin: 0% 50%;
@@ -1393,6 +1406,9 @@ body.about .logo path {
 }
 .about .header nav a::before {
   background: var(--main-about-primary);
+}
+.about .menu-icon span {
+  background-color: var(--main-about-primary);
 }
 .about .wrapper {
   background-image: url("../assets/images/lines-bg.webp");
@@ -1589,6 +1605,9 @@ body.nori .logo path {
 .nori .header nav a::before {
   background: #4050f7;
 }
+.nori .menu-icon span {
+  background-color: #4050f7;
+}
 body.hom {
   background-color: #ebeae7;
   transition: 0s;
@@ -1601,6 +1620,9 @@ body.hom .logo path {
 }
 .hom .header nav a::before {
   background: #dc5842;
+}
+.hom .menu-icon span {
+  background-color: #dc5842;
 }
 body.ls {
   background-color: #000;
@@ -1615,6 +1637,9 @@ body.ls .logo path {
 .ls .header nav a::before {
   background: #dfe1eb;
 }
+.ls .menu-icon span {
+  background-color: #dfe1eb;
+}
 body.mtn {
   background-color: #cecfd0;
   transition: 0s;
@@ -1627,6 +1652,9 @@ body.mtn .logo path {
 }
 .mtn .header nav a::before {
   background: #161616;
+}
+.mtn .menu-icon span {
+  background-color: #161616;
 }
 body.glasin {
   background-color: #edf0f3;
@@ -1641,6 +1669,9 @@ body.glasin .logo path {
 .glasin .header nav a::before {
   background: #1d1e1b;
 }
+.glasin .menu-icon span {
+  background-color: #1d1e1b;
+}
 body.glyfit {
   background-color: #efeee8;
   transition: 0s;
@@ -1653,6 +1684,9 @@ body.glyfit .logo path {
 }
 .glyfit .header nav a::before {
   background: #1e1e1e;
+}
+.glyfit .menu-icon span {
+  background-color: #1e1e1e;
 }
 body.friend-420 {
   background-color: #e6dfc8;
@@ -1667,6 +1701,9 @@ body.friend-420 .logo path {
 .friend-420 .header nav a::before {
   background: #405c41;
 }
+.friend-420 .menu-icon span {
+  background-color: #405c41;
+}
 body.friend-jen {
   background-color: #fff7f0;
   transition: 0s;
@@ -1679,6 +1716,9 @@ body.friend-jen .logo path {
 }
 .friend-jen .header nav a::before {
   background: #1d7260;
+}
+.friend-jen .menu-icon span {
+  background-color: #1d7260;
 }
 body.thredx {
   background-color: #e8e8df;
@@ -1698,6 +1738,9 @@ body.thredx .logo path {
 }
 .thredx .header nav a::before {
   background: #fff;
+}
+.thredx .menu-icon span {
+  background-color: #fff;
 }
 .case .wrapper-inner {
   padding: 0 2.5rem;
@@ -1778,7 +1821,17 @@ body.thredx .logo path {
   display: block;
 }
 .col {
-  margin-bottom: 5.556vw;
+  margin-bottom: 2.556vw;
+}
+@media (min-width: 1666px) {
+  .col {
+    margin-bottom: 2vw;
+  }
+}
+@media (min-width: 2000px) {
+  .col {
+    margin-bottom: 0.5vw;
+  }
 }
 @media (max-width: 767px) {
   .col {
@@ -1953,6 +2006,9 @@ body.contact .logo path {
 .contact .header nav a::before {
   background: #2cafc7;
 }
+.contact .menu-icon span {
+  background-color: #2cafc7;
+}
 .contact .wrapper {
   background: url("../assets/images/stars.svg") repeat;
 }
@@ -2059,9 +2115,9 @@ h5,
 }
 @media (max-width: 767px) {
   #swoosh {
-    left: -60px;
+    left: -100px;
     width: 50rem;
-    margin-top: 2rem;
+    margin-top: 1.5rem;
   }
 }
 #swoosh rect {
@@ -2110,6 +2166,9 @@ body.front .logo path {
 }
 .front .header nav a::before {
   background: var(--main-yellow);
+}
+.front .menu-icon span {
+  background-color: var(--main-yellow);
 }
 .shadow-front {
   position: absolute;
@@ -2179,6 +2238,9 @@ body.shop .logo path {
 }
 .shop .header nav a::before {
   background: var(--main-shop-primary);
+}
+.shop .menu-icon span {
+  background-color: var(--main-shop-primary);
 }
 .small-header {
   width: 52.6388888889%;
@@ -2304,6 +2366,9 @@ body.work .logo path {
 }
 .work .header nav a::before {
   background: var(--main-work-primary);
+}
+.work .menu-icon span {
+  background-color: var(--main-work-primary);
 }
 .work .wrapper {
   padding: 9rem 0 0 0;
@@ -2777,6 +2842,95 @@ body.work .logo path {
   100% {
     background-color: #ff6237;
   }
+}
+.active-menu .logo path {
+  fill: var(--main-yellow) !important;
+}
+.active-menu.header nav {
+  opacity: 1;
+  visibility: visible;
+}
+@media (max-width: 767px) {
+  .header.active-menu {
+    mix-blend-mode: normal !important;
+  }
+}
+@media (max-width: 767px) {
+  .header nav {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background: #0e0b36;
+    color: var(--main-yellow);
+    z-index: 1;
+    padding-top: 5rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    transition: 0.6s ease;
+    visibility: hidden;
+    opacity: 0;
+  }
+  .header ul {
+    flex-direction: column;
+  }
+  .header li {
+    text-align: center;
+  }
+}
+.menu-icon {
+  width: 2rem;
+  height: 1.5rem;
+  position: absolute;
+  right: 1rem;
+  top: 0.5rem;
+  background: none;
+  border: none;
+  z-index: 2;
+}
+.menu-icon span {
+  width: 100%;
+  height: 3px;
+  display: block;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+.menu-icon span:nth-child(1) {
+  position: absolute;
+  top: 0;
+}
+.menu-icon span:nth-child(2) {
+  position: absolute;
+  top: calc(50% - 4px);
+}
+.menu-icon span:nth-child(3) {
+  position: absolute;
+  top: calc(100% - 8px);
+}
+.active-menu .menu-icon span:nth-child(2) {
+  opacity: 0;
+}
+.active-menu .menu-icon span:nth-child(1),
+.active-menu .menu-icon span:nth-child(3) {
+  background-color: var(--main-yellow);
+  top: calc(50% - 4px);
+  top: 0.5rem;
+}
+.active-menu .menu-icon span:nth-child(1) {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+}
+.active-menu .menu-icon span:last-child {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
 }
 @-moz-keyframes slideUp {
   0% {
