--- a/src/css/elements/mobile-menu.styl
+++ b/src/css/elements/mobile-menu.styl
@@ -5,6 +5,9 @@
     opacity: 1;
     visibility: visible;
 
+body.active-menu
+    background: #0e0b36 !important
+
 .header.active-menu
     @media $mobile
         mix-blend-mode: normal !important;
