--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -218,6 +218,13 @@ body.thredx .logo path
 .case-header
     margin: 0 0 5vw
 
+    video
+        height: 70vh;
+        min-height: 25rem
+        max-height: 40rem
+        width: 100%;
+        object-fit: cover;
+
     @media $mobile
         margin-bottom: 1rem
 
