--- a/src/css/header-big.styl
+++ b/src/css/header-big.styl
@@ -38,13 +38,55 @@
     background: #08052d
     overflow: hidden
 
+    video
+        pointer-events: none;
+        opacity: 0.1;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
 .header-big__bg iframe
     height: 110%;
     width: 110%;
     position: absolute;
-    top: 0;
+    top: 0%;
     left: -5%;
     right: 0;
     bottom: 0;
-    opacity: .3
-    z-index: -5
+    pointer-events: none;
+
+@media screen and (max-width: 1350px)
+    .header-big__bg iframe
+        height: 110%;
+        width: 140%;
+        left: -25%
+
+.active-reel .header-big__bg
+    cursor: url('/assets/images/cursor.png'), auto;
+
+iframe
+    opacity: 0
+    visibility: hidden
+    transition: opacity .6s
+
+.header-big h1,
+.header-big h2,
+.btn-wrapper .btn,
+video
+    transition: opacity .6s
+    opacity: 1
+
+.active-reel
+    overflow: hidden;
+
+    .header-big h1,
+    .header-big h2,
+    .btn-wrapper,
+    video,
+    .header nav
+        opacity: 0
+        visibility: hidden
+    
+    iframe
+        opacity: 1
+        visibility: visible
