--- a/src/css/elements/button.styl
+++ b/src/css/elements/button.styl
@@ -8,6 +8,12 @@
     display: inline-block    
     background: transparent
     font-size: clamp(1rem, .9vw + 0.5rem, 1.5rem);
+    cursor pointer
+
+    &.play-reel
+
+        @media $mobile
+            display: none
 
     @media $mobile
         padding: 0.75rem 1.5rem;
