--- a/src/css/elements/footer.styl
+++ b/src/css/elements/footer.styl
@@ -28,6 +28,11 @@
 
     &--margin
         margin-top: -2rem
+
+    &--front
+
+        @media $mobile
+            margin-top: 0
         
 .big-footer__center
     grid-column-start: 4;
