--- a/src/css/pages/work.styl
+++ b/src/css/pages/work.styl
@@ -95,7 +95,9 @@ body.work .logo path
             transform: translateY(-3.5rem)
 
         @media $mobile
-            transform: translateY(-1.5rem)
+            transform: translateY(0)
+            background: var(--background) !important
+            color: currentColor !important
 
         .btn-category 
             border-color: var(--text)
