--- a/src/css/pages/work.styl
+++ b/src/css/pages/work.styl
@@ -96,7 +96,7 @@ body.work .logo path
 
         @media $mobile
             transform: translateY(0)
-            background: var(--background) !important
+            background: var(--main-bg-work) !important
             color: currentColor !important
 
         .btn-category 
