More removal of tap highlight color

--- a/src/css/elements/mobile-menu.styl
+++ b/src/css/elements/mobile-menu.styl
@@ -46,6 +46,7 @@ body.active-menu
     border: none
     z-index: 2
     display: none
+    -webkit-tap-highlight-color: transparent;  
 
     @media $mobile
         display: block
@@ -56,6 +57,7 @@ body.active-menu
     display: block;
     border-radius: 5px;
     transition: all 0.3s ease;
+    -webkit-tap-highlight-color: transparent;  
 }
 .menu-icon span:nth-child(1) {
     position: absolute;
