--- a/assets/main.css
+++ b/assets/main.css
@@ -2996,6 +2996,7 @@ body.active-menu {
   border: none;
   z-index: 2;
   display: none;
+  -webkit-tap-highlight-color: transparent;
 }
 @media (max-width: 767px) {
   .menu-icon {
@@ -3008,6 +3009,7 @@ body.active-menu {
   display: block;
   border-radius: 5px;
   transition: all 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 .menu-icon span:nth-child(1) {
   position: absolute;
