--- a/src/css/elements/mobile-menu.styl
+++ b/src/css/elements/mobile-menu.styl
@@ -5,9 +5,6 @@
     opacity: 1;
     visibility: visible;
 
-body.active-menu
-    background: #0e0b36 !important
-
 .header.active-menu
     @media $mobile
         mix-blend-mode: normal !important;
@@ -40,7 +37,7 @@ body.active-menu
     width: 2rem;
     height: 1.5rem;
     position: absolute;
-    right: 1rem
+    right: .5rem
     top: .5rem
     background: none
     border: none
