--- a/src/css/header-big.styl
+++ b/src/css/header-big.styl
@@ -64,7 +64,7 @@
 .active-reel .header-big__bg
     cursor: url('/assets/images/cursor.png'), auto;
 
-iframe
+.front iframe
     opacity: 0
     visibility: hidden
     transition: opacity .6s
@@ -94,7 +94,7 @@ video
             opacity: 1
             visibility: visible
     
-    iframe
+    .front iframe
         opacity: 1
         visibility: visible
 
