--- a/src/css/elements/footer.styl
+++ b/src/css/elements/footer.styl
@@ -20,11 +20,20 @@
     &--dark
         background: linear-gradient(180deg, rgba(111,143,114,1) 68%, rgba(94,121,97,1) 68%);
 
+        @media $mobile
+            background: rgba(111,143,114,1)
+
     &--blue
         background: linear-gradient(180deg, rgba(0,129,167,1) 68%, rgba(0,98,128,1) 68%);
 
+        @media $mobile
+            background: rgba(0,129,167,1)
+
     &--green
         background: linear-gradient(180deg, rgba(29, 114, 96, 1) 68%, rgba(22, 99, 83, 1) 68%);
+
+        @media $mobile
+            background: rgba(29, 114, 96, 1)
 
     &--margin
         margin-top: -2rem
