--- a/src/css/header-big.styl
+++ b/src/css/header-big.styl
@@ -94,7 +94,7 @@ video
             opacity: 1
             visibility: visible
     
-    .front iframe
+    iframe
         opacity: 1
         visibility: visible
 
